// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreadCrumb renders 1`] = `
<Memo(CanvasBreadCrumb)
  ariaLabel=""
  height={-1}
  items={
    Array [
      Object {
        "clickable": true,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "1",
          "values": Object {
            "ItemClickable": true,
            "ItemDisplayName": "Item 1",
            "ItemKey": "item1",
          },
        },
        "id": "1",
        "key": "item1",
        "text": "Item 1",
      },
      Object {
        "clickable": undefined,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "2",
          "values": Object {
            "ItemDisplayName": "Item 2",
            "ItemKey": "item2",
          },
        },
        "id": "2",
        "key": "item2",
        "text": "Item 2",
      },
      Object {
        "clickable": true,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "3",
          "values": Object {
            "ItemClickable": true,
            "ItemDisplayName": "Item 7",
            "ItemKey": "item7",
          },
        },
        "id": "3",
        "key": "item7",
        "text": "Item 7",
      },
      Object {
        "clickable": true,
        "data": MockEntityRecord {
          "getNamedReference": [MockFunction],
          "id": "4",
          "values": Object {
            "ItemClickable": true,
            "ItemDisplayName": "Item 8",
            "ItemKey": "item8",
          },
        },
        "id": "4",
        "key": "item8",
        "text": "Item 8",
      },
    ]
  }
  maxDisplayedItems={4}
  onSelected={[Function]}
  overflowIndex={0}
  setFocus=""
  tabIndex={0}
  themeJSON=""
  width={-1}
/>
`;

exports[`BreadCrumb renders dummy items when no items configured 1`] = `
<Memo(CanvasBreadCrumb)
  ariaLabel=""
  height={-1}
  items={
    Array [
      Object {
        "clickable": true,
        "id": "1",
        "key": "1",
        "text": "Item 1",
      },
      Object {
        "clickable": true,
        "id": "2",
        "key": "2",
        "text": "Item 2",
      },
      Object {
        "clickable": true,
        "id": "3",
        "key": "3",
        "text": "Item 3",
      },
    ]
  }
  maxDisplayedItems={3}
  onSelected={[Function]}
  overflowIndex={0}
  setFocus=""
  tabIndex={0}
  themeJSON=""
  width={-1}
/>
`;

exports[`BreadCrumb theme 1`] = `<div />`;
